# trading-bot

./: .gitignore  pyproject.toml
bot/: __init__.py  data_loader.py  display_labels.py  eval.py  feature_extractor.py  main.py  run_telegram.py  telegram_bot.py
models/: catboost_classifier.cbm  catboost_classifier.metadata.json  linear_regression.joblib  linear_regression.metadata.json  logistic_regression.joblib  logistic_regression.metadata.json
